--- a/index.html
+++ b/index.html
@@ -255,67 +255,75 @@ h1, h2, h3, td {
 	<tr style="background:#fff;" align="center"><td valign="top" height="30"><img src="./images/gray-line.png"></td></tr>
 	<!-- Section 5 End -->
 
-	
+
+	<!-- Section 6 start -->
 	<tr style="background:#fff;" align="center">
 		<td>
 			<table width="100%" border="0" cellspacing="0" cellpadding="0" class="container">
 				<tr>
-					<td class="fullw" align="center" width="45%" valign="top"><img src="https://pixabulousdesigns.in/emailer/mailer3/image-6.png"></td>
+					<!-- Side Image  -->
+					<td class="fullw" align="center" width="45%" valign="top"><img src="./images/image-6.png"></td>
+					<!-- Main Text  -->
 					<td class="maintxt" width="45%">
-						<h4 style="font-size:22px;color:#9e0001;font-weight:bold;line-height: 26px;margin-top:0; margin-bottom: 15px;">Launch of ‘Certificate 
+						<h4 style="font-size:22px;color:#9e0001;font-weight:bold;line-height: 26px;margin-top:0; margin-bottom: 15px;" contenteditable="true">Launch of ‘Certificate 
 							Course on Indian Accounting Standards</h4>
 
 						<table>
 							<tr>
-								<td width="50"><img src="https://pixabulousdesigns.in/emailer/mailer3/calender-icon.png" style="vertical-align: text-top;"></td>
-								<td><h5 style="font-size:18px;color:#000000;font-weight:600;line-height:30px;margin-top:6px;margin-bottom:0px;"> <strong style="font-size: 24px;">29th April 2023</strong></h5></td>
+								<td width="50"><img src="./images/calender-icon.png" style="vertical-align: text-top;"></td>
+								<td><h5 style="font-size:18px;color:#000000;font-weight:600;line-height:30px;margin-top:6px;margin-bottom:0px;" contenteditable="true"> <strong style="font-size: 24px;">29th April 2023</strong></h5></td>
 							</tr>
 						</table>
 
 						<h6 style="font-size:18px;color:#015147;font-weight:bold;line-height: 26px;margin-top:10px;margin-bottom:3px;">Organized by:</h6>
-						<p style="font-size:14px;color:#000000;font-weight:700;line-height:16px;margin: 0;">Accounting Standard Board (ASB)</p>
+						<p style="font-size:14px;color:#000000;font-weight:700;line-height:16px;margin: 0;" contenteditable="true">Accounting Standard Board (ASB)</p>
 					</td>
 					
-
-					<td class="fullw" width="10%" valign="top" align="right"><img src="https://pixabulousdesigns.in/emailer/mailer3/sno-6.png"></td>
+					<!-- Side NO  -->
+					<td class="fullw" width="10%" valign="top" align="right"><img src="./images/sno-6.png"></td>
 
 				</tr>
 			</table>
 		</td>
 	</tr>
-	
-	<tr style="background:#fff;" align="center"><td valign="middle" height="70"><a href="https://resource.cdn.icai.org/73143asb58995.pdf" target="_blank" style="display: inline-block;"><img src="https://pixabulousdesigns.in/emailer/mailer3/sec-6-btn.png"></a></td></tr>
-	<tr style="background:#fff;" align="center"><td valign="top" height="30"><img src="https://pixabulousdesigns.in/emailer/mailer3/gray-line.png"></td></tr>
+	<!-- middle button  -->
+	<tr style="background:#fff;" align="center"><td valign="middle" height="70"><a href="#" style="display: inline-block;"><img src="./images/sec-6-btn.png"></a></td></tr>
+	<tr style="background:#fff;" align="center"><td valign="top" height="30"><img src="./images/gray-line.png"></td></tr>
+	<!-- Section 6 End  -->
 
 
+	<!-- Section 7 Start  -->
 	<tr style="background:#fff;" align="center">
 		<td>
 			<table width="100%" border="0" cellspacing="0" cellpadding="0" class="container">
 				<tr>
-					<td class="fullw" width="10%" valign="top"><img src="https://pixabulousdesigns.in/emailer/mailer3/sno-7.png"></td>
+					<!-- Side NO  -->
+					<td class="fullw" width="10%" valign="top"><img src="./images/sno-7.png"></td>
+					<!-- Main text  -->
 					<td class="maintxt" width="45%">
-						<h4 style="font-size:22px;color:#683300;font-weight:bold;line-height: 26px;margin-top:0; margin-bottom: 15px;">Launch of ‘Certificate 
+						<h4 style="font-size:22px;color:#683300;font-weight:bold;line-height: 26px;margin-top:0; margin-bottom: 15px;" contenteditable="true">Launch of ‘Certificate 
 							Course on Indian Accounting Standards (Ind AS)</h4>
 
 						<table>
 							<tr>
-								<td width="50"><img src="https://pixabulousdesigns.in/emailer/mailer3/calender-icon.png" style="vertical-align: text-top;"></td>
-								<td><h5 style="font-size:18px;color:#000000;font-weight:600;line-height:30px;margin-top:6px;margin-bottom:0px;"> <strong style="font-size: 24px;">13th May 2023</strong></h5></td>
+								<td width="50"><img src="./images/calender-icon.png" style="vertical-align: text-top;"></td>
+								<td><h5 style="font-size:18px;color:#000000;font-weight:600;line-height:30px;margin-top:6px;margin-bottom:0px;" contenteditable="true"> <strong style="font-size: 24px;">13th May 2023</strong></h5></td>
 							</tr>
 						</table>
 
 						<h6 style="font-size:18px;color:#015147;font-weight:bold;line-height: 26px;margin-top:10px;margin-bottom:3px;">Organized by:</h6>
-						<p style="font-size:14px;color:#000000;font-weight:700;line-height:16px;margin: 0;">Accounting Standard Board (ASB) </p>
+						<p style="font-size:14px;color:#000000;font-weight:700;line-height:16px;margin: 0;" contenteditable="true">Accounting Standard Board (ASB) </p>
 					</td>
-					<td class="fullw" width="45%" valign="top"><img src="https://pixabulousdesigns.in/emailer/mailer3/image-7.png"></td>
+					<!-- Side Image  -->
+					<td class="fullw" width="45%" valign="top"><img src="./images/image-7.png"></td>
 				</tr>
 			</table>
 		</td>
 	</tr>
-
-	<tr style="background:#fff;" align="center"><td valign="middle" height="70" bgcolor="#ffffff"><a href="https://resource.cdn.icai.org/73228asb59080.pdf" target="_blank" style="display: inline-block;"><img src="https://pixabulousdesigns.in/emailer/mailer3/sec-7-btn.png"></a></td></tr>
-
-	<tr style="background:#fff;" align="center"><td valign="top" height="30"><img src="https://pixabulousdesigns.in/emailer/mailer3/gray-line.png"></td></tr>
+	<!-- Middle button  -->
+	<tr style="background:#fff;" align="center"><td valign="middle" height="70" bgcolor="#ffffff"><a href="#" style="display: inline-block;"><img src="./images/sec-7-btn.png"></a></td></tr>
+	<tr style="background:#fff;" align="center"><td valign="top" height="30"><img src="./images/gray-line.png"></td></tr>
+	<!-- Section 7 End  -->
 
 
 	<tr style="background:#fff;" align="center">
