--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <style type="text/css">
 html {width:100%; height:100%;}	
-body { margin: 0 !important; padding: 0 !important; -webkit-text-size-adjust:none; -ms-text-size-adjust:none; font-family: 'Poppins', sans-serif; background: #f5f5f5; color: #111111; }
+body { margin: 0 !important; padding: 0 !important; font-family: 'Poppins', sans-serif; background: #f5f5f5; color: #111111; }
 img { border: 0 !important; outline: none !important; max-width: 100%; }
 table {border-collapse:collapse;}
 h3{ margin-top:0; margin-bottom:20px;  }
@@ -326,39 +326,41 @@ h1, h2, h3, td {
 	<!-- Section 7 End  -->
 
 
+	<!-- Section 8 Start  -->
 	<tr style="background:#fff;" align="center">
 		<td>
 			<table width="100%" border="0" cellspacing="0" cellpadding="0" class="container">
 				<tr>
-					<td class="fullw" align="center" width="45%" valign="top"><img src="https://pixabulousdesigns.in/emailer/mailer3/image-8.png"></td>
+					<!-- Side Image  -->
+					<td class="fullw" align="center" width="45%" valign="top"><img src="./images/image-8.png"></td>
+					<!-- Main text  -->
 					<td class="maintxt" width="45%">
-						<h4 style="font-size:22px;color:#6a006e;font-weight:bold;line-height: 26px;margin-top:0; margin-bottom: 10px;">Launch of ‘Certificate Course on Indian 
+						<h4 style="font-size:22px;color:#6a006e;font-weight:bold;line-height: 26px;margin-top:0; margin-bottom: 10px;" contenteditable="true">Launch of ‘Certificate Course on Indian 
 							Accounting Standards (Ind AS) (Mumbai Physical Batch-46)</h4>
 
 						<table>
 							<tr>
-								<td width="50"><img src="https://pixabulousdesigns.in/emailer/mailer3/calender-icon.png" style="vertical-align: text-top;"></td>
-								<td><h5 style="font-size:18px;color:#000000;font-weight:600;line-height:30px;margin-top:6px;margin-bottom:0px;"> <strong style="font-size: 24px;">13th May 2023</strong></h5></td>
+								<td width="50"><img src="./images/calender-icon.png" style="vertical-align: text-top;"></td>
+								<td><h5 style="font-size:18px;color:#000000;font-weight:600;line-height:30px;margin-top:6px;margin-bottom:0px;" contenteditable="true"> <strong style="font-size: 24px;">13th May 2023</strong></h5></td>
 							</tr>
 						</table>
 
 						<h6 style="font-size:18px;color:#015147;font-weight:bold;line-height: 26px;margin-top:10px;margin-bottom:3px;">Organized by:</h6>
-						<p style="font-size:14px;color:#000000;font-weight:700;line-height:16px;margin: 0;">Accounting Standard Board (ASB)</p>
+						<p style="font-size:14px;color:#000000;font-weight:700;line-height:16px;margin: 0;" contenteditable="true">Accounting Standard Board (ASB)</p>
 					</td>
 					
 
-					<td class="fullw" width="10%" valign="top" align="right"><img src="https://pixabulousdesigns.in/emailer/mailer3/sno-8.png"></td>
+					<td class="fullw" width="10%" valign="top" align="right"><img src="./images/sno-8.png"></td>
 
 				</tr>
 			</table>
 		</td>
 	</tr>
+	<!-- middle button  -->
+	<tr style="background:#fff;" align="center"><td valign="middle" height="80"><a href="#" style="display: inline-block;"><img src="./images/sec-8-btn.png"></a></td></tr>
 	
-	<tr style="background:#fff;" align="center"><td valign="middle" height="80"><a href="https://resource.cdn.icai.org/73240asb59101.pdf" target="_blank" style="display: inline-block;"><img src="https://pixabulousdesigns.in/emailer/mailer3/sec-8-btn.png"></a></td></tr>
-	
 
-
-
+    <!-- Footer of the page  -->
 	<tr bgcolor="#011f4b">
 	  <td><table class="restbl">
 
@@ -366,10 +368,10 @@ h1, h2, h3, td {
 
 		<tr>
 		<td width="250" align="center">
-			<a href="https://twitter.com/theicai" target="_blank"><img src="https://pixabulousdesigns.in/emailer/mailer3/twitter-icon.png"></a>
-			<a href="https://www.youtube.com/icaiorgtube" target="_blank" style="margin-left: 1px; margin-right: 1px;"><img src="https://pixabulousdesigns.in/emailer/mailer3/youtube-icon.png"></a>
-			<a href="https://www.linkedin.com/school/theicai/" target="_blank" style="margin-left: 1px; margin-right: 1px;"><img src="https://pixabulousdesigns.in/emailer/mailer3/linkedin-icon.png"></a>
-			<a href="https://www.instagram.com/icaiorg/" target="_blank" style="margin-left: 1px; margin-right: 1px;"><img src="https://pixabulousdesigns.in/emailer/mailer3/instagram-icon.png"></a>
+			<a href="#"><img src="./images/twitter-icon.png"></a>
+			<a href="#" style="margin-left: 1px; margin-right: 1px;"><img src="./images/youtube-icon.png"></a>
+			<a href="#" style="margin-left: 1px; margin-right: 1px;"><img src="./images/linkedin-icon.png"></a>
+			<a href="#" style="margin-left: 1px; margin-right: 1px;"><img src="./images/instagram-icon.png"></a>
 			<a href="https://www.facebook.com/theicai" target="_blank" style="margin-left: 1px; margin-right: 1px;"><img src="https://pixabulousdesigns.in/emailer/mailer3/fb-icon.png"></a>
 			<a href="https://www.kooapp.com/profile/theicai/" target="_blank" style="margin-left: 1px; margin-right: 1px;"><img src="https://pixabulousdesigns.in/emailer/mailer3/koo.png"></a>
 			<a href="https://t.me/theicai" target="_blank"><img src="https://pixabulousdesigns.in/emailer/mailer3/telegram.png"></a>
