Footer is completed

--- a/index.html
+++ b/index.html
@@ -372,14 +372,14 @@ h1, h2, h3, td {
 			<a href="#" style="margin-left: 1px; margin-right: 1px;"><img src="./images/youtube-icon.png"></a>
 			<a href="#" style="margin-left: 1px; margin-right: 1px;"><img src="./images/linkedin-icon.png"></a>
 			<a href="#" style="margin-left: 1px; margin-right: 1px;"><img src="./images/instagram-icon.png"></a>
-			<a href="https://www.facebook.com/theicai" target="_blank" style="margin-left: 1px; margin-right: 1px;"><img src="https://pixabulousdesigns.in/emailer/mailer3/fb-icon.png"></a>
-			<a href="https://www.kooapp.com/profile/theicai/" target="_blank" style="margin-left: 1px; margin-right: 1px;"><img src="https://pixabulousdesigns.in/emailer/mailer3/koo.png"></a>
-			<a href="https://t.me/theicai" target="_blank"><img src="https://pixabulousdesigns.in/emailer/mailer3/telegram.png"></a>
+			<a href="#" style="margin-left: 1px; margin-right: 1px;"><img src="./images/fb-icon.png"></a>
+			<a href="#" style="margin-left: 1px; margin-right: 1px;"><img src="./images/koo.png"></a>
+			<a href="#"><img src="./images/telegram.png"></a>
 		</td>
 
-		<td width="250" align="center"><img src="https://pixabulousdesigns.in/emailer/mailer3/icai-footer-logo.jpg"></td>
+		<td width="250" align="center"><img src="./images/icai-footer-logo.jpg"></td>
 
-		<td width="147"><a href="https://www.icai.org/" target="_blank"><img src="https://pixabulousdesigns.in/emailer/mailer3/visit-text.jpg"></a></td>
+		<td width="147"><a href="#"><img src="./images/visit-text.jpg"></a></td>
 
 	</tr>
 
@@ -388,6 +388,7 @@ h1, h2, h3, td {
 </table>
 	</td>
 	</tr>
+	<!-- Footer End  -->
 
 </table>
 
